Add cheerio to dependencies in update-stars.yml

--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install node-fetch
+  run: npm install node-fetch cheerio
 
       - name: Run fetch script
         run: node fetch-stars.js
