--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -2,7 +2,7 @@ name: Update Chadsoft Stars
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 */6 * * *"   # every 6 hours
   workflow_dispatch:
 
 permissions:
@@ -13,16 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install cheerio@1.0.0-rc.12
-
-      - name: Run script
+      - name: Run fetch script
         run: node fetch-stars.js
 
       - name: Commit stars.json
